# cob_hand-release

./: .gitmodules  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: main.yml
client/: CMakeLists.txt
client/src/: bridge.cpp  serial_port.h
cob_hand/: CHANGELOG.rst  CMakeLists.txt  package.xml
cob_hand_bridge/: CHANGELOG.rst  CMakeLists.txt  package.xml
cob_hand_bridge/client/: make_library.py
cob_hand_bridge/client/src/: gpio.h  hardware.h  sdhx.h
cob_hand_bridge/src/: cob_hand_bridge_node.cpp
debian/: changelog  control  copyright  gbp.conf  rules
rpm/: ros-indigo-cob-hand-bridge.spec  ros-indigo-cob-hand.spec  ros-kinetic-cob-hand-bridge.spec  ros-kinetic-cob-hand.spec  ros-melodic-cob-hand-bridge.spec  ros-noetic-cob-hand-bridge.spec  template.spec
src/: cob_hand_bridge_node.cpp
